// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksSubList renders correctly Done section 1`] = `
<ListItem
  dense={true}
  disableGutters={true}
>
  <List
    className="makeStyles-fullWidth-1"
    dense={true}
    subheader={
      <ListSubheader
        disableSticky={true}
      >
        <strong>
          Done
           (
          1
          )
        </strong>
      </ListSubheader>
    }
  >
    <TaskListItem
      task={
        Object {
          "createdAt": "",
          "description": "",
          "id": "1",
          "implementationDate": "",
          "newbie": Object {},
          "status": "UNCOMPLETED",
          "title": "Call you head manager",
        }
      }
    />
  </List>
</ListItem>
`;

exports[`Component - TasksSubList renders correctly Todo section 1`] = `
<ListItem
  dense={true}
  disableGutters={true}
>
  <List
    className="makeStyles-fullWidth-1"
    dense={true}
    subheader={
      <ListSubheader
        disableSticky={true}
      >
        <strong>
          Todo
           (
          1
          )
        </strong>
      </ListSubheader>
    }
  >
    <TaskListItem
      task={
        Object {
          "createdAt": "",
          "description": "",
          "id": "2",
          "implementationDate": "",
          "newbie": Object {},
          "status": "COMPLETED",
          "title": "Write you main manager",
        }
      }
    />
  </List>
</ListItem>
`;

exports[`Component - TasksSubList renders correctly without tasks and count 1`] = `
<ListItem
  dense={true}
  disableGutters={true}
>
  <List
    className="makeStyles-fullWidth-1"
    dense={true}
    subheader={
      <ListSubheader
        disableSticky={true}
      >
        <strong>
          Todo
           (
          0
          )
        </strong>
      </ListSubheader>
    }
  />
</ListItem>
`;
